privacy policy added

--- a/pages/privacy.html
+++ b/pages/privacy.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Quizly-Privacy Policy</title>
+    <title>Quizly – Privacy Policy</title>
     <link rel="stylesheet" href="../styles.css" />
     <link rel="stylesheet" href="../shared/css/variables.css" />
     <link rel="stylesheet" href="../shared/css/standart.css" />
@@ -24,24 +24,200 @@
         <img src="/assets/icons/wave.png" alt="a background wave image" />
       </div>
     </section>
+
     <header>
       <div id="header" class="z_5"></div>
     </header>
 
     <main class="main-privacy">
       <div class="p48">
-        <h2>Subtitle</h2>
+        <h1>Privacy Policy – Quizly</h1>
+        <p><strong>Last updated:</strong> <!-- TODO: Update date --> 04 December 2025</p>
+
+        <h2>1. Introduction</h2>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste ea
-          placeat illo omnis, atque temporibus nostrum quia! Impedit, aliquid.
-          Placeat impedit neque quod quasi eos fuga ipsa fugit odit voluptatem?
+          Welcome to <strong>Quizly</strong>. On this page we inform you about how we
+          process personal data when you use our platform. This includes our
+          website, the quiz application and all related services.
+        </p>
+
+        <h2>2. Controller</h2>
+        <p>
+          The controller responsible for data processing on this website is:
+        </p>
+        <!-- TODO: Replace with your real contact details -->
+        <p>
+          <strong>Website Operator</strong><br />
+          Leo Rullani <br />
+          Untere Farnbühlstrasse 3<br />
+          5610 Wohlen – Switzerland<br />
+          E-mail: your.email@example.com
+        </p>
+
+        <h2>3. Data we process</h2>
+        <p>We only process data that is necessary to provide and improve Quizly.</p>
+
+        <h3>3.1 Account data</h3>
+        <ul>
+          <li>Username</li>
+          <li>E-mail address</li>
+          <li>Password (stored only as a salted and hashed value)</li>
+        </ul>
+
+        <h3>3.2 Usage and quiz data</h3>
+        <ul>
+          <li>Created quizzes (title, description, questions, answers)</li>
+          <li>Associated YouTube URLs used to create quizzes</li>
+          <li>Time of creation and updates of your quizzes</li>
+        </ul>
+
+        <h3>3.3 Technical data</h3>
+        <p>
+          When using Quizly, technical data may be processed automatically in
+          order to provide the service securely and reliably. This can include:
+        </p>
+        <ul>
+          <li>IP address (short-term for technical purposes)</li>
+          <li>Browser type and version</li>
+          <li>Date and time of access</li>
+          <li>Operating system and device information</li>
+        </ul>
+
+        <h2>4. Authentication and cookies</h2>
+        <p>
+          For authentication we use <strong>JSON Web Tokens (JWT)</strong>, which
+          are stored as <strong>HTTP-only cookies</strong>. These cookies cannot be
+          accessed via JavaScript and are used solely to keep you logged in.
+        </p>
+        <p>We use in particular:</p>
+        <ul>
+          <li><strong>access_token</strong> – short-lived token for authentication</li>
+          <li><strong>refresh_token</strong> – longer-lived token to obtain a new access token</li>
+        </ul>
+        <p>
+          After logging out, these tokens are invalidated on the server side so
+          that they can no longer be used.
+        </p>
+
+        <h2>5. YouTube and external services</h2>
+        <h3>5.1 YouTube</h3>
+        <p>
+          Quizly allows you to create quizzes based on YouTube videos by
+          entering a YouTube URL. The video itself is not stored by us. We
+          download only the <strong>audio track</strong> of the video temporarily in
+          order to create a transcript and generate quiz questions.
+        </p>
+        <p>
+          Please note that YouTube is provided by Google Ireland Limited.
+          The processing of data by YouTube is governed by YouTube’s own
+          privacy policy.
+        </p>
+
+        <h3>5.2 Audio processing and transcription</h3>
+        <p>
+          To extract and process the audio of a YouTube video, we use
+          <strong>yt-dlp</strong> and <strong>FFmpeg</strong>.
+        </p>
+        <p>
+          For transcription of audio we use <strong>Whisper AI</strong>. In our setup
+          Whisper is executed locally on the server. The audio and resulting
+          transcript are used only to generate the quiz and are not shared with
+          other users.
+        </p>
+
+        <h3>5.3 Quiz generation with Gemini</h3>
+        <p>
+          Quiz questions are generated using <strong>Gemini Flash</strong> (Google).
+          For this purpose, the text transcript is sent to the Gemini API. The
+          quiz (title, description, questions and answer options) is then
+          stored in our database under your account.
+        </p>
+        <p>
+          The processing of data by Google and Gemini is subject to Google's own
+          privacy terms and API terms of use.
+        </p>
+
+        <h2>6. Purpose of data processing</h2>
+        <p>We process your data for the following purposes:</p>
+        <ul>
+          <li>Providing the Quizly platform and its core features</li>
+          <li>Creating and managing your user account</li>
+          <li>Generating quizzes based on YouTube content you provide</li>
+          <li>Saving and displaying your created quizzes</li>
+          <li>Ensuring the security and stability of the application</li>
+        </ul>
+
+        <h2>7. Data retention</h2>
+        <p>
+          We store your personal data only for as long as necessary to fulfil
+          the purposes described above or as required by law.
+        </p>
+        <ul>
+          <li>
+            Account data is kept for the duration of your account’s existence.
+          </li>
+          <li>
+            Quizzes remain stored until you actively delete them or delete your
+            account (if such a function is provided).
+          </li>
+          <li>
+            Technical log data may be stored for a short period for security and
+            error analysis.
+          </li>
+        </ul>
+
+        <h2>8. Sharing of data</h2>
+        <p>
+          We generally do not share your personal data with third parties unless:
+        </p>
+        <ul>
+          <li>you have given explicit consent,</li>
+          <li>it is required by law or authorities, or</li>
+          <li>
+            it is technically necessary to use external services such as Gemini
+            or YouTube (as described above).
+          </li>
+        </ul>
+
+        <h2>9. Your rights</h2>
+        <p>
+          Depending on your jurisdiction, you may have the following rights
+          regarding your personal data:
+        </p>
+        <ul>
+          <li>Right of access to your stored data</li>
+          <li>Right to rectification of incorrect data</li>
+          <li>Right to deletion ("right to be forgotten")</li>
+          <li>Right to restriction of processing</li>
+          <li>Right to data portability</li>
+          <li>Right to object to certain processing operations</li>
+        </ul>
+        <p>
+          To exercise your rights, please contact us using the contact details
+          above. We will process your request in accordance with the applicable
+          data protection laws.
+        </p>
+
+        <h2>10. Security</h2>
+        <p>
+          We use appropriate technical and organisational measures to protect
+          your personal data against loss, misuse and unauthorised access.
+          However, no internet-based system can be completely secure, so we
+          cannot guarantee absolute security.
+        </p>
+
+        <h2>11. Changes to this Privacy Policy</h2>
+        <p>
+          We may update this Privacy Policy from time to time in order to adapt
+          it to changes in our services or legal requirements. The current
+          version is always available on this page.
         </p>
       </div>
     </main>
 
     <footer class="footer z-6 pos_abs">
-      <a href="./legalnotice.html">Legal notice</a>
-      <a href="./privacy.html">Privacy policy</a>
+      <a href="./legalnotice.html" class="cu_po">Legal notice</a>
+      <a href="./privacy.html" class="cu_po">Privacy policy</a>
     </footer>
   </body>
 </html>
