--- a/pages/legalnotice.html
+++ b/pages/legalnotice.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Quizly-Privacy Policy</title>
+    <title>Quizly – Legal Notice</title>
     <link rel="stylesheet" href="../styles.css" />
     <link rel="stylesheet" href="../shared/css/variables.css" />
     <link rel="stylesheet" href="../shared/css/standart.css" />
@@ -24,17 +24,117 @@
         <img src="/assets/icons/wave.png" alt="a background wave image" />
       </div>
     </section>
+
     <header>
       <div id="header" class="z_5"></div>
     </header>
 
     <main class="main-privacy">
       <div class="p48">
-        <h2>Subtitle</h2>
+        <h1>Legal Notice / Impressum</h1>
+
+        <h2>1. Website Operator</h2>
+        <!-- TODO: Replace with your real operator data -->
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste ea
-          placeat illo omnis, atque temporibus nostrum quia! Impedit, aliquid.
-          Placeat impedit neque quod quasi eos fuga ipsa fugit odit voluptatem?
+          <strong>Quizly – Learning Platform</strong><br />
+          Leugzim Rullani<br />
+          Untere Farnbühlstrasse 3<br />
+          5610 Wohlen<br />
+          E-mail: leugzimrullani@outlook.com<br />
+          Phone: +00 000 000000
+        </p>
+
+        <h3>Responsible for content</h3>
+        <p>
+          Responsible for the content of this website in accordance with
+          applicable media and telecommunication laws is the website operator
+          listed above.
+        </p>
+
+        <h2>2. Nature of the service</h2>
+        <p>
+          Quizly is a web-based learning platform that allows registered users
+          to generate and play quizzes based on YouTube videos. The quizzes are
+          generated using automated transcription and AI-supported question
+          generation.
+        </p>
+
+        <h2>3. Copyright and intellectual property</h2>
+        <p>
+          Unless otherwise stated, all content and materials on this website,
+          including texts, graphics, logos, icons and design, are protected by
+          copyright and other intellectual property laws.
+        </p>
+        <p>
+          Any reproduction, distribution, modification or public display of the
+          content requires the prior written consent of the respective rights
+          holder, unless such use is expressly permitted by law.
+        </p>
+
+        <h2>4. Use of YouTube content</h2>
+        <p>
+          Quizly itself does not provide or host any videos. Users may provide
+          YouTube URLs in order to generate quizzes. The video content remains
+          on YouTube and is subject exclusively to YouTube’s terms of use and
+          the rights of the respective copyright holders.
+        </p>
+        <p>
+          Users are responsible for ensuring that their use of YouTube content
+          complies with the applicable terms and rights.
+        </p>
+
+        <h2>5. External links</h2>
+        <p>
+          This website may contain links to external sites from third parties.
+          We have no influence on the content of these external websites.
+          Therefore, we cannot accept any liability for such external content.
+        </p>
+        <p>
+          The respective provider or operator of the pages is always responsible
+          for the content of the linked pages. At the time of linking, no
+          illegal content was recognisable on the linked pages. However, a
+          permanent control of the contents of the linked pages is not
+          reasonable without concrete evidence of a violation of the law. If we
+          become aware of any legal infringement, we will remove such links
+          immediately.
+        </p>
+
+        <h2>6. Liability for content</h2>
+        <p>
+          We take great care in creating the content on this website. However,
+          we cannot guarantee that the content is complete, correct or
+          up-to-date.
+        </p>
+        <p>
+          As a service provider, we are responsible for our own content on
+          these pages in accordance with general laws. We are not obligated to
+          monitor transmitted or stored third-party information or to search
+          for circumstances that indicate illegal activity. Obligations to
+          remove or block the use of information under general laws remain
+          unaffected.
+        </p>
+
+        <h2>7. Liability for technical availability</h2>
+        <p>
+          We strive to keep Quizly available without major interruptions.
+          However, we cannot guarantee uninterrupted availability or freedom
+          from errors. Temporary downtime may occur for technical reasons
+          (maintenance, updates, server problems, etc.).
+        </p>
+
+        <h2>8. Dispute resolution / consumer information</h2>
+        <p>
+          If you are a consumer, you may have the right to use certain dispute
+          resolution mechanisms according to your local jurisdiction. We are
+          not obliged and generally not willing to participate in dispute
+          resolution proceedings before a consumer arbitration board, unless
+          required by law.
+        </p>
+
+        <h2>9. Contact</h2>
+        <p>
+          If you have questions about this legal notice or about Quizly in
+          general, please contact us using the contact details above.
         </p>
       </div>
     </main>
